--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://allageclinic.github.io/allages/contact.html">
-    
     <meta property="og:url" content="https://allageclinic.github.io/allage/contact.html"/>
     <meta property="og:image" content="https://allageclinic.github.io/allages/images/thumbs/BANNER_FB.jpg"/>
     <meta property="product:retailer_item_id" content="facebook_61560249694438">
@@ -196,15 +195,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="aboutus.html">診所簡介</a></li>
                 <li><a class="dropdown-item" href="index.html#timeinfo">門診資訊</a></li>
+                <li><a class="dropdown-item" href="index.html#services">診療項目</a></li>
                 <li><a class="dropdown-item" href="index.html#doctor">醫師介紹</a></li>          
                 <li><a class="dropdown-item" href="./index.html#traffic">交通資訊</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">掛號資訊</a></li>
               </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="treatment.html">診療項目</a>
-              
             </li>
             <li class="nav-item">
               <a class="nav-link" href="health-Edu.html">衛教宣導</a>
@@ -344,7 +340,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <ul class="list-unstyled footer-nav">
               <li class="mb-2"><a href="index.html"><i class="fa-solid fa-house me-2"></i>首頁</a></li>
               <li class="mb-2"><a href="aboutus.html"><i class="bi bi-info-circle me-2"></i>關於全齡</a></li>
-              <li class="mb-2"><a href="treatment.html"><i class="fa-solid fa-list me-2"></i>診療項目</a></li>
               <li class="mb-2"><a href="health-Edu.html"><i class="bi bi-play-circle me-2"></i>衛教宣導</a></li>
               <li class="mb-2"><a href="contact.html"><i class="fa-solid fa-envelope me-2"></i>聯絡我們</a></li>
             </ul>
