--- a/aboutus.html
+++ b/aboutus.html
@@ -115,8 +115,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <li><a class="dropdown-item" href="index.html#services">診療項目</a></li>
                 <li><a class="dropdown-item" href="index.html#doctor">醫師介紹</a></li>          
                 <li><a class="dropdown-item" href="./index.html#traffic">交通資訊</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">掛號資訊</a></li>
+                <!-- <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">掛號資訊</a></li> -->
               </ul>
             </li>
             <li class="nav-item">
