--- a/aboutus.html
+++ b/aboutus.html
@@ -42,7 +42,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://allageclinic.github.io/allages/aboutus.html">
     
-    <meta property="og:url" content="https://allageclinic.github.io/aboutus.html"/>
+    <meta property="og:url" content="https://allageclinic.github.io/allages/aboutus.html"/>
     <meta property="og:image" content="https://allageclinic.github.io/allages/images/thumbs/BANNER_FB.jpg"/>
     <meta property="product:retailer_item_id" content="facebook_61560249694438">
    <meta property="og:image:type" content="images/jpeg" />
