--- a/index.html
+++ b/index.html
@@ -445,24 +445,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
  const weekMap = {
-  "2025-07-28": {
-    weekRange: "7/28～8/1",
+  "2025-09-01": {
+    weekRange: "09/01~09/05",
     image: "week_1.jpg"
   },
-  "2025-08-04": {
-    weekRange: "8/4～8/8",
+  "2025-09-08": {
+    weekRange: "09/08~09/12",
     image: "week_2.jpg"
   },
-  "2025-08-11": {
-    weekRange: "8/11～8/15",
+  "2025-09-15": {
+    weekRange: "09/15~09/19",
     image: "week_3.jpg"
   },
-  "2025-08-18": {
-    weekRange: "8/18～8/22",
+  "2025-09-22": {
+    weekRange: "09/22~09/26",
     image: "week_4.jpg"
   },
-  "2025-08-25": {
-    weekRange: "8/25～8/29",
+  "2025-09-29": {
+    weekRange: "09/29~10/03",
     image: "week_5.jpg"
   }
 };
