--- a/aboutus.html
+++ b/aboutus.html
@@ -146,8 +146,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <li class="mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i>便利的交通位置，備有停車空間</li>
           <li class="mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i>溫馨舒適的診所環境</li>
           <li class="mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i>多元化的醫療服務</li>
+          <li class="mb-2 mt-3 " style="margin-left: 5%;">
+           <button class="btn btn-success" onclick="window.location.href='#contact'">立即聯絡我們</button>
+          </li> 
         </ul>
-        <button class="btn btn-success" onclick="window.location.href='#contact'">立即聯絡我們</button>
+       
+        
       </div>
    
     <div class="row row-cols-1 row-cols-md-3 g-4">
