--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="container">
     <div class="row mb-5 justify-content-center" style="padding: 15px 0;">
       <!-- 左側：文字內容 -->
-      <div class="col-lg-6 col-md-10 col-12 mb-4 mb-lg-0">
+      <div class="col-lg-6 col-md-10 col-12 mb-4 mb-lg-0 d-flex align-items-center justify-content-center">
         <div class="d-inline-block text-start">
           <h2 class="text-center">樂活全齡 關心全民</h2>
           <h3 class="hh3">專業醫療服務，照顧您全家健康</h3>
           <p class="lead mb-4">樂活全齡綜合診所辦理社區衛教講座</p>
-          <ul class="list-unstyled mb-4">
+          <ul class="list-unstyl mb-4">
             <li class="mb-2">
               <i class="bi bi-check-circle-fill text-success me-2"></i>家庭醫學專科醫師親自診療
             </li>
